--- a/ngx-svg/index.html
+++ b/ngx-svg/index.html
@@ -6,9 +6,9 @@
   <base href="/ngx-svg">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./ngx-svg/favicon.ico">
 </head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="./ngx-svg/inline.bundle.js"></script><script type="text/javascript" src="./ngx-svg/polyfills.bundle.js"></script><script type="text/javascript" src="./ngx-svg/styles.bundle.js"></script><script type="text/javascript" src="./ngx-svg/scripts.bundle.js"></script><script type="text/javascript" src="./ngx-svg/vendor.bundle.js"></script><script type="text/javascript" src="./ngx-svg/main.bundle.js"></script></body>
 </html>
