--- a/ngx-svg/index.html
+++ b/ngx-svg/index.html
@@ -5,7 +5,7 @@
   <title>Ngx Svg Demo</title>
   <base href="/ngx-svg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./ngx-svg/favicon.ico">
 </head>
 <body>
   <app-root></app-root>
