--- a/ngx-svg/index.html
+++ b/ngx-svg/index.html
@@ -6,8 +6,8 @@
   <base href="/ngx-svg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./ngx-svg/favicon.ico">
-</head>
+<link rel="stylesheet" href="./ngx-svg/styles.css"></head>
 <body>
   <app-root></app-root>
-<script src="./ngx-svg/runtime-es2015.js" type="module"></script><script src="./ngx-svg/runtime-es5.js" nomodule defer></script><script src="./ngx-svg/polyfills-es5.js" nomodule defer></script><script src="./ngx-svg/polyfills-es2015.js" type="module"></script><script src="./ngx-svg/styles-es2015.js" type="module"></script><script src="./ngx-svg/styles-es5.js" nomodule defer></script><script src="./ngx-svg/scripts.js" defer></script><script src="./ngx-svg/vendor-es2015.js" type="module"></script><script src="./ngx-svg/vendor-es5.js" nomodule defer></script><script src="./ngx-svg/main-es2015.js" type="module"></script><script src="./ngx-svg/main-es5.js" nomodule defer></script></body>
+<script src="./ngx-svg/runtime-es2015.js" type="module"></script><script src="./ngx-svg/runtime-es5.js" nomodule defer></script><script src="./ngx-svg/polyfills-es5.js" nomodule defer></script><script src="./ngx-svg/polyfills-es2015.js" type="module"></script><script src="./ngx-svg/scripts.js" defer></script><script src="./ngx-svg/vendor-es2015.js" type="module"></script><script src="./ngx-svg/vendor-es5.js" nomodule defer></script><script src="./ngx-svg/main-es2015.js" type="module"></script><script src="./ngx-svg/main-es5.js" nomodule defer></script></body>
 </html>
